# University-Projects

./: README.md
CMPE 320 - Fundamentals of Software Development (C++, Godot)/CMPE 320 Assignment 1/: TestInsultGenerator.cpp  TestingFile.cpp  insultgenerator_19ng38.cpp  insultgenerator_19ng38.h
CMPE 320 - Fundamentals of Software Development (C++, Godot)/CMPE 320 Assignment 2/: FractionTest.cpp  fraction_19ng38.cpp  fraction_19ng38.h
CMPE 320 - Fundamentals of Software Development (C++, Godot)/CMPE 320 Assignment 3/: jumble_19ng38.cpp  jumble_19ng38.h  tempCodeRunnerFile.cpp  testJumble.cpp
CMPE 320 - Fundamentals of Software Development (C++, Godot)/Group Project/320 Godot/team-31-sunrise/FightAndFlight/: CMakeLists.txt  Makefile  main.cpp
CMPE 327 - Software Quality Assurance (SQL, PHP)/Assignment 2/: index.php
CMPE 332 - Database Management Systems (SQl, PHP)/: RelationalModelImplementation.txt  SqlAssignment.txt  phpTutorial..txt
CMPE 332 - Database Management Systems (SQl, PHP)/ELEC332_FinalProject/: connectdb.php  createAcct.php  empSchedule.php  getSchedule.php  getorders.php  newCustomer.php  restaurant.css  restaurant.php  (+2 more)
ELEC 278 - Fundamentals of Infostructures (Java)/: LAB4_PART1.txt  LAB4_PART2.txt  LAB4_PART3.txt  WordleGame.java
ELEC 299 - Mechatronics Project (C++, Arduino)/: lab1-activity3-19ng38.ino  lab1-activity4-19ng38.ino  lab1-activity5-19ng38.ino  lab1-activity7-19ng38.ino  lab1-activity8-19ng38.ino
ELEC 390 - Principles of Design and Development (Python)/: Removed-Stuff.txt
ELEC 473 - Cryptography & NetSec (C)/: 473A2.c
(+273 files in other folders)
